--- a/src/App.css
+++ b/src/App.css
@@ -131,8 +131,8 @@ font-family: 'Rounds Black', sans-serif;
   display: flex;
   max-width: fit-content;
   flex-direction: row;
-  align-items: start;
-  justify-content: start;
+  align-items: flex-start;
+  justify-content: flex-start;
   border-radius: 1.25rem;
   font-weight: 500;
   backdrop-filter: blur(10px);
