--- a/src/App.css
+++ b/src/App.css
@@ -308,6 +308,33 @@ font-family: 'Playfair Display', serif;
 }
 
 
+.scroll {
+  scrollbar-width: thin;
+}
+
+.scroll::-webkit-scrollbar {
+  width: 6px;
+}
+
+.scroll::-webkit-scrollbar-track {
+  background: rgb(47, 0, 255);
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background: #0044ff;
+  border-radius: 6px;
+}
+
+.scroll::-webkit-scrollbar-thumb:hover {
+  background: #5b81ff;
+}
+
+/* firefox */
+.scroll {
+  scrollbar-color: #00b7ff rgba(0, 69, 97, 0.308);
+  scrollbar-width: thin;
+}
+
 /* From Uiverse.io by gharsh11032000 */ 
  .animated-button {
     position: relative;
@@ -322,7 +349,7 @@ font-family: 'Playfair Display', serif;
     border-radius: 100px;
     font-weight: 600;
     color: rgb(228, 228, 228);
-    box-shadow: 0 0 0 2px rgb(255, 255, 255);
+    box-shadow: 0 0 0 2px rgb(0, 247, 255);
     cursor: pointer;
     overflow: hidden;
     transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
@@ -356,7 +383,7 @@ font-family: 'Playfair Display', serif;
     transform: translate(-50%, -50%);
     width: 20px;
     height: 20px;
-    background-color: rgb(47, 255, 245);
+    background-color: rgb(27, 40, 216);
     border-radius: 50%;
     opacity: 0;
     transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
@@ -371,7 +398,7 @@ font-family: 'Playfair Display', serif;
 
   .animated-button:hover {
     box-shadow: 0 0 0 12px transparent;
-    color: #212121;
+    color: rgb(0, 0, 0);
     border-radius: 12px;
         pointer-events: all;
   }
