--- a/src/App.css
+++ b/src/App.css
@@ -431,6 +431,41 @@ font-family: 'Playfair Display', serif;
   }
 
 
-  .abs{
-    position: initial;
-  }
+  .shuffle-parent {
+    color: white;
+  display: inline-block;
+  white-space: normal;
+  word-wrap: break-word;
+  will-change: transform;
+  line-height: 1;
+  font-size: 4rem;
+  font-family: 'Press Start 2P', sans-serif;
+  text-transform: uppercase;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.shuffle-parent.is-ready {
+  visibility: visible;
+}
+
+.shuffle-char-wrapper {
+  display: inline-block;
+  overflow: hidden;
+  vertical-align: baseline;
+  position: relative;
+    pointer-events: none;
+}
+
+.shuffle-char-wrapper > span {
+  display: inline-flex;
+  will-change: transform;
+    pointer-events: none;
+}
+
+.shuffle-char {
+  line-height: 1;
+  display: inline-block;
+  text-align: center;
+    pointer-events: none;
+}
