--- a/src/App.css
+++ b/src/App.css
@@ -288,15 +288,53 @@ font-family: 'Rounds Black', sans-serif;
   outline-offset: 2px;
 }
 
-.maindiv{
+.BigText{
+ font-weight: 0;
+ font-size: 3.4em;
+}
+
+.maindiv {
   width: 80vw;
-  height: 80vh;
+  height: 84vh;
   z-index: 10;
-  top: 15vh;
-  left: 10vw;
+  margin-top: 4%;
+    border-style: solid;
+  border-width: 3px;
+  border-color: #0044ff;
+  border-radius: 8px;
+  justify-self: center;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
   position: absolute;
   pointer-events: none;
 }
+
+.contentinner {
+  width: 50%;
+  height: 50%;
+  background: rgba(28, 12, 245, 0.363);
+  padding-top: 3px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #1e0088;
+  border-radius: 8px;
+  text-align: center;
+  display: grid;
+  place-items: center;
+  gap: 20px;
+  z-index: 5;
+  padding-top: 15px;
+  overflow-y: auto;
+   pointer-events: auto;
+  scrollbar-color: #00b7ff rgba(0, 69, 97, 0.308);
+  scrollbar-width: thin;
+}
+
+.contentinner::-webkit-scrollbar {
+  width: 6px;
+}
+
 
 h1, h2, h3, .title {
   margin-top: 5px;
@@ -388,7 +426,6 @@ font-family: 'Playfair Display', serif;
     opacity: 0;
     transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
   }
-
   .animated-button .text {
     position: relative;
     z-index: 1;
@@ -469,3 +506,15 @@ font-family: 'Playfair Display', serif;
   text-align: center;
     pointer-events: none;
 }
+
+
+  .my-custom-class{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0.5rem;
+  border-radius: inherit;
+  position: relative;
+  z-index: 1;
+  }
